# vqe_knapsack_local

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.json  fast.json  n20_gpu.json  n20_gpu_block1.json  n20_gpu_block2.json  n20_gpu_block3.json  n20_gpu_block4.json  n20_gpu_block5.json
mcp_server/: __init__.py  server.py
scripts/: __init__.py  run_experiments.py
src/vqe_knapsack/: __init__.py  aer_estimator_factory.py  ansatz_factory.py  classical.py  config.py  experiment.py  hamiltonian.py  optimizer_factory.py  parallel_experiment.py  solver.py
src/vqe_knapsack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: __init__.py  test_e2e.py
tests/unit/: __init__.py  test_aer_estimator_factory.py  test_classical.py  test_config.py  test_hamiltonian.py  test_optimizer_factory.py  test_solver.py
